# MCTui

./: .gitignore  .prettierrc  Cargo.toml  README.md  eslint.config.mjs  hash.json  package-lock.json  package.json  readme.md  rustfmt.toml  settings.example.json  settings.json  tsconfig.json
constants/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: app.rs  main.rs  tui.rs
launcher/src/screens/: mod.rs
launcher/src/screens/authenticate/: mod.rs
launcher/src/screens/download/: mod.rs  ui.rs
launcher/src/utils/: config.rs  mod.rs  screen_manager.rs  shared_memory.rs
launcher/src/widgets/: loader.rs  mod.rs  progress_state.rs  window.rs
minecraft/: Cargo.toml  README.md
minecraft/examples/: assets_download.rs  assets_repair.rs  concurrent_assets_download.rs  example_assets.json  example_manifest.json  jvm.rs  manifest.rs
minecraft/src/: asset.rs  game_args.rs  hosts.rs  jvm.rs  lib.rs
minecraft/src/jvm/: mod.rs
minecraft/src/manifest/: download.rs  jvm_arg.rs  mod.rs  platform.rs
minecraft/src/traits/: concurrent_download.rs  download.rs  into_invalid.rs  mod.rs  path.rs  retain_usable.rs  should_use.rs  url.rs  verify.rs
src/: app.rs  app.tsx  cli.tsx  constants.rs  main.rs  tui.rs
src/components/: key_hint.tsx  progress.tsx
src/lib/: config.ts  in_memory.ts  index.ts  launch.ts  request.ts  state.ts
src/screens/: account.tsx  authenticate.tsx  home.rs  home.tsx  login.tsx  mod.rs  start.tsx  traits.rs
src/screens/authenticate/: arg.rs  events.rs  loader.rs  mod.rs  ui.rs
src/screens/download/: events.rs  mod.rs
src/screens/home/: event.rs  mod.rs
src/screens/login/: arg.rs  events.rs  form.rs  form_state.rs  login_request_state.rs  mod.rs  request_loader.rs  types.rs
src/screens/run/: events.rs  mod.rs  ui.rs
src/screens/unpack/: events.rs  mod.rs  ui.rs
src/screens/verify/: events.rs  mod.rs  ui.rs
src/utils/: config.rs  immediate_rw_lock.rs  in_memory.rs  key_hint.rs  minecraft.rs  mod.rs  requester.rs  screen_manager.rs  shared_memory.rs  title.rs
src/utils/ui/: key_hint.rs  mod.rs
src/utils/yggdrasil/: mod.rs  types.rs
src/widgets/: loader.rs  loader_state.rs  login_form.rs  mod.rs  progress.rs  window.rs
(+22 files in other folders)
