[package]
name = "mctui"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_float = "1.1.0"
bitflags = "2.6.0"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
itertools = "0.13.0"
ratatui = { version = "0.28.1" }
reqwest = { version = "0.12.7", features = ["stream"] }
throbber-widgets-tui = "0.7.0"
tokio = { version = "1.40.0", features = ["full"] }
