[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
tokio = { version = "1.40.0" }
reqwest = { version = "0.12.8", features = ["stream"] }
futures = "0.3.31"
sha1 = "0.10.6"
strfmt = "0.2.4"
itertools = "0.13.0"
dunce = "1.0.5"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
constants = { path = "../constants" }
